# gofu

./: .gitignore  AUTHORS  COPYRIGHT  Makefile.in  configure  configure.ac  indent.sh  pre_autotools.sh  tagit.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
resource/rubygo/: Blanc_210.xcf
resource/sgf_gnugo/: COPYRIGHT  sgfnode.c
src/: Makefile.am  Makefile.in  gofu.c  gofu.h  gofu_alloc.c  gofu_alloc.h  gofu_parameter.h  tagit.sh
src/libgoban/: IDEA.txt  Makefile.am  Makefile.in  a.out  alloc.c  essai.c  goban.c  goban.h  libgoban.3934.trace  libgoban.8701.trace  size  size.c
src/parameter/: Makefile.am  gofu_param.c  gofu_param.h  gofu_param_size.c  gofu_param_size.h
src/populate/: gofu_popu.c  gofu_popu.h
src/render/: gofu_grid.c  gofu_grid.h  gofu_move.c  gofu_move.h  gofu_render.c  gofu_render.h  gofu_render_background.c  gofu_render_background.h  gofu_render_color.c  gofu_render_color.h  gofu_render_external.h  gofu_render_grid.c  gofu_render_grid.h  gofu_render_grid_background.c  gofu_render_grid_background.h  gofu_render_grid_liberty.c  gofu_render_grid_liberty.h  gofu_render_grid_starpoint.c  gofu_render_grid_starpoint.h  gofu_render_highlight.c  gofu_render_highlight.h  gofu_render_label.c  gofu_render_label.h  gofu_render_marker.c  gofu_render_marker.h  gofu_render_starpoint.c  gofu_render_stone.c  gofu_render_stone.h  gofu_render_util.c  gofu_render_util.h
src/resource/rubygo/: Noir_210.xcf
src/sgf_glib/: sgf.c
src/sgf_gnugo/: README
